<resources>
    <string name="app_name">Nizi</string>
    <string name="sample_first_name">Jaap</string>
    <string name="sample_last_name">van Steen</string>
    <string name="sample_dob">01-01-1990</string>
    <string name="sample_email">jaapvansteen@hotmail.com</string>
    <string name="sample_password">Welkom123</string>
    <string name="back">Terug</string>
    <string name="patient_overview">Patiënt overzicht</string>
    <string name="no_internet_connection">Geen internetverbinding</string>
    <string name="api_is_down">Server offline, probeer later opnieuw</string>
    <string name="home">Home</string>
    <string name="diary">Dagboek</string>
    <string name="conversations">Gesprekken</string>
    <string name="dashboard">Dashboard</string>
    <string name="login_success">Inloggen gelukt!</string>
    <string name="login_fail">Inloggen mislukt!</string>
    <string name="register">Registreren</string>
    <string name="login">Inloggen</string>
    <string name="login_capitalized">INLOGGEN</string>
    <string name="login_as_patient">Inloggen als patiënt</string>
    <string name="login_as_dietist">Inloggen als diëtist</string>
    <string name="logout">Uitloggen</string>
    <string name="name">Naam</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="password_forgotten">Wachtwoord vergeten</string>
    <string name="password_forgotten_capitalized">WACHTWOORD VERGETEN</string>
    <string name="username_cant_be_empty">Gebruikersnaam mag niet leeg zijn</string>
    <string name="password_cant_be_empty">Wachtwoord mag niet leeg zijn</string>
    <string name="credentials_wrong">Gebruikersnaam of wachtwoord klopt niet</string>
    <string name="send">Verstuur</string>
    <string name="reset_password">Reset wachtwoord</string>
    <string name="reset">Reset</string>
    <string name="email_cant_be_empty">Email mag niet leeg zijn</string>
    <string name="mail_sent">Mail verzonden</string>
    <string name="mail_sent_fail">Mail verzenden mislukt</string>
    <string name="contact">Contact</string>
    <string name="password_tip">Wachtwoorden worden verstrekt door de diëtist</string>
    <string name="nierstichting_url">https://www.nierstichting.nl</string>
    <string name="nierstichting_phonenumber">035 697 80 00</string>
    <string name="nierstichting_phonenumber_desc">Op werkdagen tussen 09.00 en 17.00 uur</string>
    <string name="nierstichting_email">info@nierstichting.nl</string>
    <string name="help_old">Hulp nodig?</string>
    <string name="help_desc_old">Neem contact op met Nierstichting of uw diëtist</string>
    <string name="today">Vandaag</string>
    <string name="yesterday">Gisteren</string>
    <string name="tomorrow">Morgen</string>
    <string name="guidelines">Richtlijnen</string>
    <string name="title">Titel</string>
    <string name="nutrition_values">VOEDINGSWAARDEN</string>
    <string name="other_nutrition_values">Overige voedingswaarden</string>
    <string name="calories">Calorieën</string>
    <string name="fibers">Vezels</string>
    <string name="sodium">Natrium</string>
    <string name="potassium">Potassium</string>
    <string name="water">Vocht</string>
    <string name="moisture">Vocht</string>
    <string name="proteins">Eiwitten</string>
    <string name="milligram_short">mg</string>
    <string name="milliliter_short">ml</string>
    <string name="gram">gram</string>
    <string name="gram_short">g</string>
    <string name="kcal">kcal</string>
    <string name="recent_nutrition">Recente voeding</string>
    <string name="recent">Recent</string>
    <string name="nutrition">Voeding</string>
    <string name="breakfast">Ontbijt</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Avondeten</string>
    <string name="snacks">Snacks</string>
    <string name="snack">Snack</string>
    <string name="add">Toevoegen</string>
    <string name="add_food">Voeding toevoegen</string>
    <string name="add_breakfast">Ontbijt toevoegen</string>
    <string name="add_lunch">Lunch toevoegen</string>
    <string name="add_dinner">Avondeten toevoegen</string>
    <string name="add_snack">Snack toevoegen</string>
    <string name="food_added">Voeding toegevoegd aan dagboek</string>
    <string name="food">Voeding</string>
    <string name="products">Producten</string>
    <string name="meals">Maaltijden</string>
    <string name="favorites">Favorieten</string>
    <string name="added_favorite">Toegevoegd aan favorieten</string>
    <string name="deleted_favorite">Verwijderd van favorieten</string>
    <string name="error_add_favorite">Kon product niet toevoegen aan favorieten</string>
    <string name="error_delete_favorite">Kon product niet verwijderen van favorieten</string>
    <string name="search_product">Product zoeken</string>
    <string name="scan_product">Scan product</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="amount_zero">Aantal (0)</string>
    <string name="amount_of_products">Aantal (%1$d)</string>
    <string name="portion_with_weightunit">Portie %1$s</string>
    <string name="servings">Portie</string>
    <string name="nr_servings">Aantal porties: </string>
    <string name="meal">Maaltijd</string>
    <string name="meal_name_empty">Maaltijd naam is leeg </string>
    <string name="meal_name_too_long">Maaltijd naam mag max 30 tekens zijn</string>
    <string name="make_meal">Maaltijd maken</string>
    <string name="create_meal">Maaltijd samenstellen</string>
    <string name="meal_edited">Maaltijd bewerkt</string>
    <string name="meal_deleted">Maaltijd verwijderd</string>
    <string name="photo_error">Foto maken is mislukt</string>
    <string name="did_not_add_food">U heeft nog geen voeding toegevoegd</string>
    <string name="import_food_diary">Importeren uit dagboek</string>
    <string name="added_products">Toegevoegde producten</string>
    <string name="add_products">Producten toevoegen</string>
    <string name="add_food_success">Voeding toegevoegd aan dagboek</string>
    <string name="food_deleted">Voeding verwijderd uit dagboek</string>
    <string name="add_meal_success">Maaltijd toegevoegd aan dagboek</string>
    <string name="update_food_success">Voeding is aangepast in het dagboek</string>
    <string name="delete_food_success">Voeding is verwijderd uit het dagboek</string>
    <string name="feedback_positive">Goed gedaan</string>
    <string name="feedback_negative">Beperk uw %1$sinname</string>
    <string name="feedback_encouraging">Neem meer %1$s in</string>
    <string name="fetched_doctor">Diëtist opgehaald</string>
    <string name="get_doctor_fail">Diëtist ophalen mislukt</string>
    <string name="statistics">Statistieken</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="advice_from_doctor">Advies van diëtist</string>
    <string name="advice_from">Advies van %1$s</string>
    <string name="fetched_feedbacks">Feedback opgehaald</string>
    <string name="get_feedbacks_fail">Feedback ophalen mislukt</string>
    <string name="feedback_is_empty">Voer feedback in</string>
    <string name="added_feedback">Feedback toegevoegd</string>
    <string name="add_feedback_fail">Feedback toevoegen mislukt</string>
    <string name="conversation_summary">Gesprek samenvatting</string>
    <string name="sample_date">01-01-2019</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="add_advice">Advies toevoegen</string>
    <string name="patients">Patiënten</string>
    <string name="patient">Patiënt</string>
    <string name="get_patients_success">Patiënten opgehaald!</string>
    <string name="get_patients_fail">Patiënten ophalen mislukt!</string>
    <string name="search_by_name">Zoeken op naam</string>
    <string name="add_patient">Patiënt toevoegen</string>
    <string name="edit_patient">Patiënt bewerken</string>
    <string name="delete_patient">Patiënt verwijderen</string>
    <string name="data_of">Gegevens van</string>
    <string name="average_of_patient">Gemiddelde van patient</string>
    <string name="average_of">Gemiddelde van %1$s</string>
    <string name="week">Week</string>
    <string name="trends">Trends</string>
    <string name="fetched_weight_units">Gewichtseenheden opgehaald</string>
    <string name="get_weight_unit_fail">Gewichtseenheden ophalen mislukt</string>
    <string name="fetched_patient">Patiënt opgehaald</string>
    <string name="get_patient_fail">Patiënt ophalen mislukt</string>
    <string name="fetched_dietary">Richtlijnen opgehaald</string>
    <string name="get_dietary_fail">Richtlijnen ophalen mislukt</string>
    <string name="fetched_consumptions">Consumpties opgehaald</string>
    <string name="get_consumptions_fail">Consumpties ophalen mislukt</string>
    <string name="fetched_users">Gebruikers opgehaald</string>
    <string name="get_users_fail">Gebruikers ophalen mislukt</string>
    <string name="profile">Profiel</string>
    <string name="profile_patient">Profiel patiënt</string>
    <string name="step_1">Stap 1</string>
    <string name="step_2">Stap 2</string>
    <string name="personal_info">Persoonlijke informatie</string>
    <string name="personal_info_short">Pers. informatie</string>
    <string name="first_name_req">Voornaam*</string>
    <string name="name_req">Naam*</string>
    <string name="patient_name">Patientnaam</string>
    <string name="first_name">Voornaam</string>
    <string name="last_name_req">Achternaam*</string>
    <string name="last_name">Achternaam</string>
    <string name="date_of_birth_req">Geboortedatum*</string>
    <string name="date_of_birth">Geboortedatum</string>
    <string name="date_of_birth_format">DD-MM-YYYY</string>
    <string name="weight_req">Gewicht*</string>
    <string name="weight">Gewicht</string>
    <string name="gender">Geslacht*</string>
    <string name="male">Man</string>
    <string name="female">Vrouw</string>
    <string name="email_req">E-mail*</string>
    <string name="email">E-Mail</string>
    <string name="password_req">Wachtwoord*</string>
    <string name="password_confirm_req">Wachtwoord bevestigen*</string>
    <string name="password_confirm">Wachtwoord bevestigen</string>
    <string name="kilogram_short">Kg</string>
    <string name="to_guidelines">Naar richtlijnen</string>
    <string name="calories_in_kcal">Calorieën in kcal</string>
    <string name="water_in_ml">Vocht in ml</string>
    <string name="sodium_in_mg">Natrium in mg</string>
    <string name="potassium_in_mg">Kalium in mg</string>
    <string name="protein_in_g">Eiwitten in gram</string>
    <string name="fibers_in_g">Vezels in gram</string>
    <string name="save">Opslaan</string>
    <string name="save_patient">Patiënt opslaan</string>
    <string name="empty_first_name">Vul een voornaam in</string>
    <string name="empty_last_name">Vul een achternaam in</string>
    <string name="empty_date_of_birth">Vul een geboortedatum in</string>
    <string name="empty_weight">Vul een gewicht in</string>
    <string name="empty_gender">Vink een geslacht aan</string>
    <string name="empty_email">Vul een e-mailadres in</string>
    <string name="empty_password">Vul een wachtwoord in</string>
    <string name="empty_password_confirm">Vul een bevestigend wachtwoord in</string>
    <string name="email_already_exists">Emailadres bestaat al</string>
    <string name="email_invalid">Vul een geldig emailadres in</string>
    <string name="passwords_dont_match">Wachtwoorden komen niet overeen</string>
    <string name="ic_barcode">Barcode icoontje</string>
</resources>