<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_txt_header"
        android:textSize="@dimen/h1"
        android:gravity="center"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/paddingLeft"
        android:layout_marginRight="@dimen/paddingRight"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_main_txt_username"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/h2"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/activity_main_et_username"
            android:hint="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/activity_main_txt_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h2"
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/activity_main_et_password"
            android:hint="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activity_main_txt_help"
            android:textColor="@android:color/black"
            android:textSize="@dimen/h1"
            android:text="@string/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/activity_main_txt_helpDesc"
            android:textColor="@android:color/black"
            android:text="@string/help_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activity_main_txt_nierstichtingUrl"
            android:textColor="@color/colorPrimary"
            android:text="@string/nierstichting_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activity_main_txt_nierstichtingPhonenumber"
            android:textColor="@color/colorPrimary"
            android:text="@string/nierstichting_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activity_main_txt_nierstichtingPhonenumberDesc"
            android:textColor="@android:color/black"
            android:text="@string/nierstichting_phonenumber_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activity_main_txt_nierstichtingEmail"
            android:textColor="@color/colorPrimary"
            android:text="@string/nierstichting_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</LinearLayout>