<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPatientActivity">

        <!-- Steps -->
        <LinearLayout
            android:id="@+id/activity_add_patient_ll_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <!-- Step 1 -->
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.4">

                <TextView
                    android:id="@+id/activity_add_patient_txt_step_1"
                    android:text="@string/step_1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/h3"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user"/>

                <TextView
                    android:id="@+id/activity_add_patient_txt_personal_info"
                    android:text="@string/personal_info"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/h3"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- Arrow -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.2"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_r"/>

            </LinearLayout>

            <!-- Step 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.4">

                <TextView
                    android:id="@+id/activity_add_patient_txt_step_2"
                    android:text="@string/step_2"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/h3"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:tint="@color/black"
                    android:src="@drawable/ic_culinary"/>

                <TextView
                    android:id="@+id/activity_add_patient_txt_guidelines"
                    android:text="@string/guidelines"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/h3"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Patient data -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/activity_add_patient_ll_steps"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginBottom="@dimen/marginNormal"
            android:background="@color/white"
            android:elevation="@dimen/elevationNormal">

            <!-- First Name -->
            <TextView
                android:id="@+id/activity_add_patient_txt_firstName"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h3"
                android:fontFamily="@font/segoe_ui_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginStart="@dimen/marginNormal"/>

            <EditText
                android:id="@+id/activity_add_patient_et_firstName"
                android:inputType="textCapSentences"
                android:hint="@string/first_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_txt_firstName"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginStart="@dimen/marginNormal" />

            <!-- Last Name -->
            <TextView
                android:id="@+id/activity_add_patient_txt_lastName"
                android:text="@string/last_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h3"
                android:fontFamily="@font/segoe_ui_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_et_firstName"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginStart="@dimen/marginNormal"/>

            <EditText
                android:id="@+id/activity_add_patient_et_lastName"
                android:inputType="textCapSentences"
                android:hint="@string/last_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_txt_lastName"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginStart="@dimen/marginNormal" />

            <!-- DoB -->
            <TextView
                android:id="@+id/activity_add_patient_txt_dob"
                android:text="@string/date_of_birth"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h3"
                android:fontFamily="@font/segoe_ui_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_et_lastName"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginStart="@dimen/marginNormal"/>

            <EditText
                android:id="@+id/activity_add_patient_et_dob"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_txt_dob"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginStart="@dimen/marginNormal"
                android:inputType="date"
                android:hint="@string/date_of_birth_format"/>

            <!-- Weight -->
            <TextView
                android:id="@+id/activity_add_patient_txt_weight"
                android:text="@string/weight"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h3"
                android:fontFamily="@font/segoe_ui_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_et_dob"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginStart="@dimen/marginNormal"/>

            <EditText
                android:id="@+id/activity_add_patient_et_weight"
                android:inputType="numberDecimal"
                android:hint="@string/weight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_txt_weight"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginStart="@dimen/marginNormal" />

            <TextView
                android:id="@+id/activity_add_patient_txt_gender"
                android:text="@string/gender"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h3"
                android:fontFamily="@font/segoe_ui_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_add_patient_et_weight"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginStart="@dimen/marginNormal"/>

            <RadioGroup
                android:id="@+id/activity_add_patient_rg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/activity_add_patient_txt_gender">

                <RadioButton
                    android:id="@+id/activity_add_patient_rb_male"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/activity_add_patient_rb_female"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/activity_add_patient_progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@+id/activity_add_patient_btn_to_guidelines"
                android:visibility="gone"/>

            <Button
                android:id="@+id/activity_add_patient_btn_to_guidelines"
                android:text="@string/to_guidelines"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
</RelativeLayout>