<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Navigation -->
    <LinearLayout
        android:id="@+id/fragment_add_food_ll_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_add_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/gray2"
                android:paddingTop="@dimen/marginNormal"
                android:paddingBottom="@dimen/marginNormal"
                android:text="@string/products"
                android:textColor="@color/black"
                android:fontFamily="@font/helvetica_neue_bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorAccent"/>

        </LinearLayout>


        <TextView
            android:id="@+id/activity_add_meal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/marginNormal"
            android:paddingBottom="@dimen/marginNormal"
            android:text="@string/meals"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/activity_favorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/marginNormal"
            android:paddingBottom="@dimen/marginNormal"
            android:text="@string/favorites"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- Food rv -->
    <RelativeLayout
        android:id="@+id/fragment_meals_rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/marginNormal"
        android:paddingEnd="@dimen/marginNormal"
        android:paddingTop="@dimen/marginNormal"
        android:layout_below="@+id/fragment_add_food_ll_navigation">

        <!-- Search -->
        <LinearLayout
            android:id="@+id/fragment_add_food_ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginNormal">

            <SearchView
                android:id="@+id/search_food"
                android:layout_width="0dp"
                android:layout_weight="14"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border_gray"/>

            <ImageView
                android:id="@+id/zxing_barcode_scanner"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:contentDescription="@string/ic_barcode"
                android:src="@drawable/ic_barcode" />

            <TextView
                android:id="@+id/scan_barcode_text"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSize12"
                android:text="@string/scan_barcode" />

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_add_food_txt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_add_food_ll_search"
            android:textColor="@color/black"
            android:text="@string/amount_zero"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/food_search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:layout_marginTop="2dp"
            android:scrollbars="vertical"
            android:background="@android:color/white"
            android:layout_below="@+id/fragment_add_food_txt_amount"/>

    </RelativeLayout>

</RelativeLayout>