<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activities.PatientDetailActivity">

    <!-- Header (REUSEABLE BUT NOT IMPLEMENTED YET) -->
    <LinearLayout
        android:id="@+id/activity_main_header_background"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/activity_main_txt_header"
            android:text="@string/today"
            android:textSize="@dimen/h1"
            android:textColor="@color/white"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="center"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_marginBottom="@dimen/marginNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/activity_patient_detail_average_of_patient"
        android:text="@string/average_of"
        android:textColor="@color/black"
        android:textSize="@dimen/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_header_background"
        android:layout_marginStart="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginBottom="@dimen/marginNormal"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit_patient"/>

</RelativeLayout>